<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical">

    <com.ula.gameapp.utils.views.FontHeaderTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="WELCOME"
        android:textColor="@color/red"
        android:textSize="28sp"/>

    <com.ula.gameapp.utils.views.FontBodyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:text="@string/intro_welcome_1"
        android:textColor="@color/black"/>

    <com.ula.gameapp.utils.views.FontBodyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:text="@string/intro_welcome_2"
        android:textColor="@color/black"/>

    <LinearLayout
        android:id="@+id/lnr_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_chk"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:src="@mipmap/square"
            tools:ignore="RtlHardcoded"/>

        <com.ula.gameapp.utils.views.FontBodyTextView
            android:id="@+id/txt_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/intro_welcome_3"
            android:textColor="@color/black"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnr_countdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.ula.gameapp.utils.views.FontBodyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_welcome_timer"
            android:textColor="@color/black"/>

        <cn.iwgang.countdownview.CountdownView
            android:id="@+id/countdown_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:isHideTimeBackground="true"
            app:isShowDay="true"
            app:isShowHour="true"
            app:isShowMinute="true"
            app:isShowSecond="true"
            app:isTimeTextBold="true"
            app:suffixDay="day"
            app:suffixDayRightMargin="6dp"
            app:suffixGravity="bottom"
            app:suffixHour="h"
            app:suffixHourRightMargin="4dp"
            app:suffixMillisecond="ms"
            app:suffixMinute="m"
            app:suffixMinuteRightMargin="4dp"
            app:suffixSecond="s"
            app:suffixTextColor="#000000"
            app:suffixTextSize="12sp"
            app:timeTextColor="@color/md_grey_900"
            app:timeTextSize="22sp"/>
    </LinearLayout>
</LinearLayout>
