<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical">

    <com.ula.gameapp.utils.views.FontHeaderTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="FITNESS PLAN"
        android:textColor="@color/red"
        android:textSize="28sp"/>

    <com.ula.gameapp.utils.views.FontBodyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:text="@string/intro_goal_1"
        android:textColor="@color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <include
            android:id="@+id/dialog_test_1"
            layout="@layout/dialog_goal_quote_1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:visibility="invisible"/>

        <LinearLayout
            android:id="@+id/lnr_test_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_test_1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_test_1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:src="@mipmap/circle"/>

            <com.ula.gameapp.utils.views.FontBodyTextView
                android:id="@+id/txt_test_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_goal_steps_1"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnr_test_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lnr_test_1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_test_2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:src="@mipmap/circle"/>

            <com.ula.gameapp.utils.views.FontBodyTextView
                android:id="@+id/txt_test_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_goal_steps_2"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnr_test_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lnr_test_2"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_test_3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:src="@mipmap/circle"/>

            <com.ula.gameapp.utils.views.FontBodyTextView
                android:id="@+id/txt_test_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_goal_steps_3"
                android:textColor="@color/black"/>
        </LinearLayout>

        <include
            android:id="@+id/dialog_test_4"
            layout="@layout/dialog_goal_quote_2"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_above="@id/lnr_test_4"
            android:visibility="invisible"/>

        <LinearLayout
            android:id="@+id/lnr_test_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lnr_test_3"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_test_4"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:src="@mipmap/circle"/>

            <com.ula.gameapp.utils.views.FontBodyTextView
                android:id="@+id/txt_test_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_goal_steps_4"
                android:textColor="@color/black"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
