<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative_player_controls"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/player_video_control_margin"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/linear_main_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_centerInParent="true">

        <Button
            android:id="@id/exo_rew"
            style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/player_video_control_margin"
            android:layout_marginLeft="@dimen/player_video_control_margin"
            android:layout_marginEnd="@dimen/player_video_control_margin"
            android:layout_marginRight="@dimen/player_video_control_margin"
            android:fontFamily="@font/material_icons_regular"
            android:text="@string/material_replay_10"
            android:textColor="@color/player_controls"
            android:textSize="@dimen/player_video_control_size" />

        <Button
            android:id="@id/exo_play"
            style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/player_video_control_margin"
            android:layout_marginRight="@dimen/player_video_control_margin"
            android:fontFamily="@font/material_icons_regular"
            android:text="@string/material_play_arrow"
            android:textColor="@color/player_controls"
            android:textSize="@dimen/video_play_pause_size" />

        <Button
            android:id="@id/exo_pause"
            style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/player_video_control_margin"
            android:layout_marginRight="@dimen/player_video_control_margin"
            android:fontFamily="@font/material_icons_regular"
            android:text="@string/material_pause"
            android:textColor="@color/player_controls"
            android:textSize="@dimen/video_play_pause_size" />

        <Button
            android:id="@id/exo_ffwd"
            style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/player_video_control_margin"
            android:layout_marginRight="@dimen/player_video_control_margin"
            android:fontFamily="@font/material_icons_regular"
            android:text="@string/material_forward_30"
            android:textColor="@color/player_controls"
            android:textSize="@dimen/player_video_control_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/player_timer_position_margin"
        android:layout_marginLeft="@dimen/player_timer_position_margin"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/player_timer_position_margin"
        android:layout_marginRight="@dimen/player_timer_position_margin"
        android:orientation="horizontal"
        android:layout_above="@+id/linear_time_bar">

        <TextView
            android:id="@id/exo_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:includeFontPadding="false"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/player_controls"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@id/exo_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:includeFontPadding="false"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/player_controls"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/player_timer_margin"
        android:layout_marginLeft="@dimen/player_timer_margin"
        android:layout_marginEnd="@dimen/player_timer_margin"
        android:layout_marginRight="@dimen/player_timer_margin"
        android:layout_marginBottom="24dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:id="@+id/linear_time_bar">

        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:id="@id/exo_progress"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            app:buffered_color="#88455A64"
            app:played_color="#8826C6DA"
            app:scrubber_color="@color/colorAccent"
            app:scrubber_dragged_size="18dp"
            app:scrubber_enabled_size="18dp"
            app:unplayed_color="#88e8e8e8" />

    </LinearLayout>
</RelativeLayout>